--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'myproject' do
+target 'IgcyProject' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -45,14 +45,7 @@ target 'myproject' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-    permissions_path = '../node_modules/react-native-permissions/ios'
-
-  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
-
-  pod 'Permission-Camera', :path => "../node_modules/react-native-permissions/ios/Camera/Permission-Camera.podspec"
-
-
-  target 'myprojectTests' do
+  target 'IgcyProjectTests' do
     inherit! :complete
     # Pods for testing
   end
