--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myproject",
+  "name": "IgcyProject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@baronha/react-native-multiple-image-picker": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -19,50 +18,43 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/image-editor": "^2.3.0",
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
-    "@types/react-native-video": "^5.0.15",
-    "fbjs": "^3.0.5",
-    "formik": "^2.4.2",
+    "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
-    "react-native": "0.72.0",
-    "react-native-asset": "^2.1.1",
+    "react-native": "0.72.3",
+    "react-native-date-picker": "^4.2.13",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-image-filter-kit": "^0.8.0",
-    "react-native-image-picker": "^5.6.0",
     "react-native-instagram-like-image-cropper": "^1.0.6",
     "react-native-instagram-like-picker": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-permission": "^0.0.1",
-    "react-native-permissions": "^3.8.4",
-    "react-native-popover-tooltip": "^1.1.4",
-    "react-native-reanimated": "^3.3.0",
+    "react-native-reanimated": "^3.4.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.22.0",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
     "react-native-svg": "^13.10.0",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
-    "styled-components": "^6.0.0-rc.6",
-    "yup": "^1.2.0"
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.6",
+    "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.5",
+    "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
